[gd_scene load_steps=3 format=3 uid="uid://dv874f3ia1u8g"]

[ext_resource type="Script" uid="uid://2ljx1cvhu2bw" path="res://Scripts/Card.gd" id="1_sd2v7"]
[ext_resource type="FontFile" uid="uid://dto0eefvqas4a" path="res://Assets/Placeholder/Fonts/munro.ttf" id="4_jbebj"]

[node name="Card" type="Container"]
offset_right = 64.0
offset_bottom = 128.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
script = ExtResource("1_sd2v7")

[node name="Card_Back" type="TextureRect" parent="."]
layout_mode = 2

[node name="Card_Effect" type="RichTextLabel" parent="."]
texture_filter = 4
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_jbebj")
theme_override_font_sizes/normal_font_size = 50
text = "placeholder text ... ................................................................................................................"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
